sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:3: error: not found: value getValueCOunt
  var n:Int = getValueCOunt();
              ^